# stripes

./: CMakeLists.txt  Makefile_OLD
cmake/: FindSuiteSparse.cmake
data/: dots.tga
include/: Camera.h  DenseMatrix.h  Shader.h  SparseMatrix.h  Viewer.h
shaders/: stripeFragment.glsl
src/: MeshIO.cpp  Shader.cpp  SparseMatrix.inl  Viewer.cpp
